crates/onebrain-cli/tests/snapshots/v31_envelope_snapshots__checkpoint_orphans_envelope.snap
---
source: crates/onebrain-cli/tests/v31_envelope_snapshots.rs
expression: v
---
{
  "orphan_count": 0
}
