crates/onebrain-cli/tests/snapshots/v31_envelope_snapshots__session_init_envelope_inside_vault.snap
---
source: crates/onebrain-cli/tests/v31_envelope_snapshots.rs
expression: v
---
{
  "datetime": "<DATETIME>",
  "session_token": "<SESSION_TOKEN>",
  "search_unembedded": null,
  "qmd_unembedded": null,
  "headless": false
}
