crates/onebrain-cli/tests/snapshots/v31_envelope_snapshots__session_init_envelope_outside_vault.snap
---
source: crates/onebrain-cli/tests/v31_envelope_snapshots.rs
expression: v
---
{
  "decision": "block",
  "reason": "onebrain-init-required"
}
